SERVER-22448 fix geo-sparseness planning for 2dsphereIndexVersion 3